# bike-cadence-sensor

./: .envrc  .gitignore  Brewfile  Cargo.toml  README.md  cargo  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
crates/cadence-core/: Cargo.toml
crates/cadence-core/src/: lib.rs
docs/: csc-protocol.md  new-machine-setup.md
examples/: 01_blink.rs  02_hall_input.rs  03_ssd1306.rs  04_ble_advertise.rs  05_ble_csc.rs  06_hall_oled.rs
scripts/: env.sh  install-deps.sh  test-cadence.sh
src/: lib.rs  main.rs
src/app/: mod.rs
src/ble/: advertise.rs  csc.rs  mod.rs  server.rs
src/board/: config.rs  led.rs  mod.rs  pins.rs  status_led.rs
src/cadence/: mod.rs
src/display/: mod.rs  oled.rs
src/gps/: mod.rs
src/hardware/: i2c.rs  mod.rs
src/navigation/: mod.rs
src/sensors/: hall.rs  hall_debug.rs  mod.rs
src/util/: mod.rs  time.rs
